--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- trigger build -->
 <head>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -371,4 +372,5 @@ function classifyNoise(db, dataArray) {
 </div>
 
 </body>
+
 </html>
